--- a/styke.css
+++ b/styke.css
@@ -1,10 +1,12 @@
 div.user {
-    border:1px solid black;
-    padding:10px;
+    border: 2px solid red;
+    padding: 15px; 
 }
 div.user div {
-    cursor: pointer;
+    cursor: help; 
+    font-weight: bold; 
 }
 div.user.selected {
-    background-color: greenyellow;
+    background-color: lightblue; 
+    color: white; 
 }
